# EDR_Rust_poc

./: Cargo.toml
.cargo/: config.toml
agent/: Cargo.toml  build.rs
agent-common/: Cargo.toml
agent-common/src/: lib.rs
agent-ebpf/: Cargo.toml
agent-ebpf/src/: main.rs
agent/src/: config.rs  ebpf_state.rs  hooking.rs  lib.rs  main.rs
agent/src/hooking/: edr.rs  parse.rs  read_ebpf.rs  send_alert.rs
config/: blocked_cmds.json  blocked_ips.json  general.json
server/: Dockerfile  app.py  docker-compose.yml  requirements.txt
server/.streamlit/: config.toml
server/data/: alerts.db-shm  alerts.db-wal
